# Multi-robot

./: README.md
multi-robot_project/iiwa_bringup/launch/: iiwa.launch.py
multi-robot_project/iiwa_description/gazebo/: iiwa.gazebo.xacro
multi-robot_project/ros2_fra2mo/: CMakeLists.txt  package.xml
multi-robot_project/ros2_fra2mo/config/: navigation.yaml
multi-robot_project/ros2_fra2mo/maps/: map.pgm  map.yaml
multi-robot_project/ros2_fra2mo/rviz_conf/: navigation.rviz
multi-robot_project/ros2_fra2mo/scripts/: gripper_tester.py
multi-robot_project/ros2_fra2mo/urdf/: fra2mo.urdf.xacro  fra2mo_base_macro.xacro  fra2mo_gripper_point.sdf  lidar_gazebo_macro.xacro
multi-robot_project/src/: CMakeLists.txt  package.xml
multi-robot_project/src/launch/: navigation.launch.py  rviz.launch.py  slam.launch.py  view_robots.launch.py  warehouse.launch.py
multi-robot_project/src/model/: model.sdf
multi-robot_project/src/rviz/: config.rviz  slam.rviz
multi-robot_project/src/scripts/: send_goal.py  tracking.py
multi-robot_project/src/urdf/: blue_sphere.sdf  green_box.sdf  iiwa_standalone.urdf.xacro  red_cylinder.sdf  system.urdf.xacro
multi-robot_project/src/world/: warehouse.world
